--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "http://AB-Debug2003.github.io/Tic-Tac-Toe",
   "scripts": {
     "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
