--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@vercel/speed-insights": "^1.0.12",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
